# WAIVE

./: .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json  version_template_inno.txt
common/: BeatGrid.hpp  Box.hpp  Checkbox.hpp  CheckboxGroup.hpp  CheckboxList.hpp  DragDrop.hpp  DragSource.h  DropDown.hpp  DrumPattern.hpp  FeatureTypes.h  GridLayout.hpp  GrooveGraph.hpp  HBox.hpp  Icon.hpp  Knob.hpp  Knob3D.hpp  Label.hpp  Layout.hpp  Link.hpp  Menu.hpp  Notes.hpp  Panel.hpp  Playhead.hpp  Popup.hpp  RadioButtons.hpp  SampleMap.hpp  SampleSlot.hpp  ScoreGrid.hpp  SimpleButton.hpp  Spinner.hpp  TextInput.hpp  VBox.hpp  ValueIndicator.hpp  WAIVEColors.hpp  WAIVEImage.hpp  WAIVEUtils.hpp  WAIVEWidget.hpp  Waveform.hpp  WaveformFeatures.hpp  WidgetGroup.hpp  (+2 more)
common/fonts/: fonts.h  poppins-light.h  poppins-medium.h  poppins-regular.h  vg5000.h
common/icons/: download_icon.h  dropdown_icon.h  search.h
common/src/: Box.cpp  Checkbox.cpp  CheckboxGroup.cpp  CheckboxList.cpp  DragDrop.cpp  DragSource_Linux.cpp  DragSource_MacOS.mm  DragSource_Windows.cpp  DropDown.cpp  DrumPattern.cpp  GridLayout.cpp  GrooveGraph.cpp  HBox.cpp  Icon.cpp  Knob.cpp  Knob3D.cpp  Label.cpp  Layout.cpp  Link.cpp  Menu.cpp  Panel.cpp  Playhead.cpp  Popup.cpp  RadioButtons.cpp  SampleMap.cpp  SampleSlot.cpp  ScoreGrid.cpp  SimpleButton.cpp  Spinner.cpp  TextInput.cpp  VBox.cpp  VSlider.cpp  ValueIndicator.cpp  WAIVEImage.cpp  WAIVEWidget.cpp  Waveform.cpp  WidgetGroup.cpp  XYSlider.cpp  model_utils.cpp
plugins/WAIVE_Midi/: CMakeLists.txt  DistrhoPluginInfo.h  WAIVEMidi.cpp  WAIVEMidi.hpp  WAIVEMidiParams.h  WAIVEMidiUI.cpp  WAIVEMidiUI.hpp  WAIVE_MIDI.cpp  WAIVE_MIDI.hpp  WAIVE_MIDIUI.cpp  WAIVE_MIDIUI.hpp  model_utils.hpp
plugins/WAIVE_Midi/components/: DrumPattern.cpp  DrumPattern.hpp  GrooveGraph.cpp  GrooveGraph.hpp  Notes.cpp  Notes.hpp  ScoreGrid.cpp  ScoreGrid.hpp
plugins/WAIVE_Midi/models/: groove_decoder.cpp  groove_decoder.h  groove_decoder.onnx.c  groove_encoder.cpp  groove_encoder.h  groove_encoder.onnx.c  groove_encoder.onnx.h  latent_distributions.h  score_decoder.cpp  score_decoder.h  score_decoder.onnx.c  score_decoder.onnx.h  score_encoder.cpp  score_encoder.h  score_encoder.onnx.c
plugins/WAIVE_Sampler/: CMakeLists.txt  DistrhoPluginInfo.h  Envelopes.cpp  Envelopes.hpp  FeatureExtractor.cpp  FeatureExtractor.hpp  Filters.cpp  Filters.hpp  HTTPClient.cpp  HTTPClient.hpp  Layout.hpp  OSCClient.cpp  OSCClient.hpp  Presets.hpp  SampleDatabase.cpp  SampleDatabase.hpp  SampleInfo.cpp  SampleInfo.hpp  SamplePlayer.cpp  SamplePlayer.hpp  SimpleUDP.cpp  SimpleUDP.hpp  Source.hpp  Tasks.cpp  Tasks.hpp  ThreadsafeBuffer.cpp  ThreadsafeQueue.cpp  ThreadsafeQueue.hpp  WAIVESampler.cpp  WAIVESampler.hpp  WAIVESamplerParams.h  WAIVESamplerUI.cpp  WAIVESamplerUI.hpp
plugins/WAIVE_Sampler/components/: SampleBrowser.cpp  SampleBrowser.hpp  SampleBrowserRoot.cpp  SampleBrowserRoot.hpp  SampleMap.cpp  SampleMap.hpp  SampleSlot.cpp  SampleSlot.hpp  SourceBrowser.cpp  SourceBrowser.hpp  SourceBrowserRoot.cpp  SourceBrowserRoot.hpp  SourceList.cpp  SourceList.hpp  TagBrowser.cpp  TagBrowser.hpp  TagMap.cpp  TagMap.hpp
plugins/WAIVE_Sampler/models/: tsne.c  tsne.h
plugins/WAIVE_Sampler/models/.ipynb_checkpoints/: tsne-checkpoint.c
plugins/WAIVE_Sequencer/: CMakeLists.txt  DistrhoPluginInfo.h  WAIVESequencer.cpp  WAIVESequencer.hpp  WAIVESequencerParams.h  WAIVESequencerUI.cpp  WAIVESequencerUI.hpp
plugins/WAIVE_Sequencer/components/: DrumPattern.cpp  DrumPattern.hpp  GrooveGraph.cpp  GrooveGraph.hpp  Notes.cpp  Notes.hpp  ScoreGrid.cpp  ScoreGrid.hpp
plugins/WAIVE_Sequencer/models/: full_groove_model.onnx.h  groove_decoder.h  groove_decoder.onnx.c  groove_decoder.onnx.h  groove_encoder.h  groove_encoder.onnx.c  groove_encoder.onnx.h  latent_distributions.h  score_decoder.h  score_decoder.onnx.c  score_decoder.onnx.h  score_encoder.h  score_encoder.onnx.c  score_encoder.onnx.h
templates/: version_config.h.in  version_template.txt  x64-windows-static-custom.cmake
tools/: bin2header.py  linux_package_plugins.sh  macOS_make_installer.sh  macOS_sign_and_notarize.sh  make_screenshots.sh  windows_installer.iss
